# non_lin_optim

./: CMakeLists.txt  README.md
all/: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/src/: benchmark.cpp
doc/: CMakeLists.txt  Doxyfile
examples/basic_minimization/: CMakeLists.txt  basic_minimization.cpp
examples/refine_camera_extrinsics/: CMakeLists.txt  refine_camera_extrinsics.cpp
include/non_lin_optim/: numerical_deriv.h  optim.h  solvelin.h  types.h
test/: CMakeLists.txt
test/src/: numerical_deriv.cpp  optim.cpp  solvelin.cpp
